update main page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,63 @@
     <title>Title</title>
 </head>
 <body>
-
+<header>
+    <div class="header">
+        <img src="img/logo.png" alt="logo" class="header-logo">
+        <div class="header-list">
+            <ul>
+                <li class="header-item">
+                    <a class="link" href="#"><span>Главная</span></a>
+                </li>
+                <li class="header-item">
+                    <a class="link" href="#"><span>О компании</span></a>
+                </li>
+                <li class="header-item">
+                    <button class="header-item-button">Коталог</button>
+                    <div class="header-subdirectory-list">
+                        <ul class="header-subdirectory">
+                            <li><a class="link" href="#"><span>Вагонка штиль лиственница</span></a></li>
+                            <li><a class="link" href="#"><span>Доска пола лиственница</span></a></li>
+                            <li><a class="link" href="#"><span>Доска пола сосна</span></a></li>
+                            <li><a class="link" href="#"><span>Имитация бруса сосна</span></a></li>
+                            <li><a class="link" href="#"><span>Имитация бруса лиственница</span></a></li>
+                            <li><a class="link" href="#"><span>Евровагонка лиственница</span></a></li>
+                            <li><a class="link" href="#"><span>Палубная доска лиственница</span></a></li>
+                            <li><a class="link" href="#"><span>Прямой планкен лиственница</span></a></li>
+                            <li><a class="link" href="#"><span>Косой планкен лиственница</span></a></li>
+                            <li><a class="link" href="#"><span>Террасная доска лиственница</span></a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="header-item">
+                    <button class="header-item-button">Строительство</button>
+                    <div class="header-subdirectory-list">
+                        <ul class="header-subdirectory">
+                            <li><a class="link" href="#"><span>Построенные здания</span></a></li>
+                            <li><a class="link" href="#"><span>Ремонт зданий и помещений</span></a></li>
+                            <li><a class="link" href="#"><span>Планировочные решения</span></a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="header-item">
+                    <button class="header-item-button">Производство</button>
+                    <div class="header-subdirectory-list">
+                        <ul class="header-subdirectory">
+                            <li><a class="link" href="#"><span>Построенные здания</span></a></li>
+                            <li><a class="link" href="#"><span>Столярная мастерская</span></a></li>
+                            <li><a class="link" href="#"><span>Сушильный цех</span></a></li>
+                            <li><a class="link" href="#"><span>Цех обработки</span></a></li>
+                            <li><a class="link" href="#"><span>Погрузка</span></a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="header-item">
+                    <a class="link" href="#"><span>Контакты</span></a>
+                </li>
+            </ul>
+        </div>
+    <button class="header-button">Заказать звонок</button>
+    </div>
+</header>
 </body>
 </html>
