--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 <header>
@@ -76,7 +77,15 @@
         </div>
     </div>
 </header>
-
+<div class="body">
+    <img class="background-image" src="img/index/background.png" alt="">
+    <div class="introduction">
+        <p class="title">Строительство домов и производство погонажных изделий из дерева</p>
+        <p class="title-info">Профессиональная команда строителей с опытом работы более 20 лет создаст для вас экологичную среду
+            для жизни и работы</p>
+        <a href="#"><button class="title-category">В каталог</button></a>
+    </div>
+</div>
 <script src="js/main.js"></script>
 </body>
 </html>
