--- a/index.html
+++ b/index.html
@@ -7,84 +7,88 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<header>
-    <div class="header">
-        <div class="header-part">
-            <img src="img/logo.png" alt="logo" class="header-logo">
-        </div>
-        <div class="header-part">
-            <div class="header-list">
-                <ul>
-                    <li class="header-item header-item-active">
-                        <a class="link" href="#"><span>Главная</span></a>
-                    </li>
-                    <li class="header-item">
-                        <a class="link" href="#"><span>О компании</span></a>
-                    </li>
-                    <li class="header-item"
-                        onmouseover="onmouseover_header('header-catalog')"
-                        onmouseout="onmouseout_header('header-catalog')">
-                        <a class="link" href="#"><span class="header-item-button">Коталог</span></a>
-                        <div class="header-subdirectory-list" id="header-catalog">
-                            <ul class="header-subdirectory">
-                                <li><a class="link" href="#"><span>Вагонка штиль лиственница</span></a></li>
-                                <li><a class="link" href="#"><span>Доска пола лиственница</span></a></li>
-                                <li><a class="link" href="#"><span>Доска пола сосна</span></a></li>
-                                <li><a class="link" href="#"><span>Имитация бруса сосна</span></a></li>
-                                <li><a class="link" href="#"><span>Имитация бруса лиственница</span></a></li>
-                                <li><a class="link" href="#"><span>Евровагонка лиственница</span></a></li>
-                                <li><a class="link" href="#"><span>Палубная доска лиственница</span></a></li>
-                                <li><a class="link" href="#"><span>Прямой планкен лиственница</span></a></li>
-                                <li><a class="link" href="#"><span>Косой планкен лиственница</span></a></li>
-                                <li><a class="link" href="#"><span>Террасная доска лиственница</span></a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="header-item"
-                        onmouseover="onmouseover_header('header-build')"
-                        onmouseout="onmouseout_header('header-build')">
-                        <a class="link" href="#"><span class="header-item-button">Строительство</span></a>
-                        <div class="header-subdirectory-list" id="header-build">
-                            <ul class="header-subdirectory">
-                                <li><a class="link" href="#"><span>Построенные здания</span></a></li>
-                                <li><a class="link" href="#"><span>Ремонт зданий и помещений</span></a></li>
-                                <li><a class="link" href="#"><span>Планировочные решения</span></a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="header-item"
-                        onmouseover="onmouseover_header('header-production')"
-                        onmouseout="onmouseout_header('header-production')">
-                        <a class="link" href="#"><span class="header-item-button">Производство</span></a>
-                        <div class="header-subdirectory-list" id="header-production">
-                            <ul class="header-subdirectory">
-                                <li><a class="link" href="#"><span>Построенные здания</span></a></li>
-                                <li><a class="link" href="#"><span>Столярная мастерская</span></a></li>
-                                <li><a class="link" href="#"><span>Сушильный цех</span></a></li>
-                                <li><a class="link" href="#"><span>Цех обработки</span></a></li>
-                                <li><a class="link" href="#"><span>Погрузка</span></a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="header-item">
-                        <a class="link" href="#"><span>Контакты</span></a>
-                    </li>
-                </ul>
+<div class="body>">
+    <header>
+        <div class="header">
+            <div class="header-part">
+                <img src="img/logo.png" alt="logo" class="header-logo">
+            </div>
+            <div class="header-part">
+                <div class="header-list">
+                    <ul>
+                        <li class="header-item header-item-active">
+                            <a class="link" href="#"><span>Главная</span></a>
+                        </li>
+                        <li class="header-item">
+                            <a class="link" href="#"><span>О компании</span></a>
+                        </li>
+                        <li class="header-item"
+                            onmouseover="onmouseover_header('header-catalog')"
+                            onmouseout="onmouseout_header('header-catalog')">
+                            <a class="link" href="#"><span class="header-item-button">Коталог</span></a>
+                            <div class="header-subdirectory-list" id="header-catalog">
+                                <ul class="header-subdirectory">
+                                    <li><a class="link" href="#"><span>Вагонка штиль лиственница</span></a></li>
+                                    <li><a class="link" href="#"><span>Доска пола лиственница</span></a></li>
+                                    <li><a class="link" href="#"><span>Доска пола сосна</span></a></li>
+                                    <li><a class="link" href="#"><span>Имитация бруса сосна</span></a></li>
+                                    <li><a class="link" href="#"><span>Имитация бруса лиственница</span></a></li>
+                                    <li><a class="link" href="#"><span>Евровагонка лиственница</span></a></li>
+                                    <li><a class="link" href="#"><span>Палубная доска лиственница</span></a></li>
+                                    <li><a class="link" href="#"><span>Прямой планкен лиственница</span></a></li>
+                                    <li><a class="link" href="#"><span>Косой планкен лиственница</span></a></li>
+                                    <li><a class="link" href="#"><span>Террасная доска лиственница</span></a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="header-item"
+                            onmouseover="onmouseover_header('header-build')"
+                            onmouseout="onmouseout_header('header-build')">
+                            <a class="link" href="#"><span class="header-item-button">Строительство</span></a>
+                            <div class="header-subdirectory-list" id="header-build">
+                                <ul class="header-subdirectory">
+                                    <li><a class="link" href="#"><span>Построенные здания</span></a></li>
+                                    <li><a class="link" href="#"><span>Ремонт зданий и помещений</span></a></li>
+                                    <li><a class="link" href="#"><span>Планировочные решения</span></a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="header-item"
+                            onmouseover="onmouseover_header('header-production')"
+                            onmouseout="onmouseout_header('header-production')">
+                            <a class="link" href="#"><span class="header-item-button">Производство</span></a>
+                            <div class="header-subdirectory-list" id="header-production">
+                                <ul class="header-subdirectory">
+                                    <li><a class="link" href="#"><span>Построенные здания</span></a></li>
+                                    <li><a class="link" href="#"><span>Столярная мастерская</span></a></li>
+                                    <li><a class="link" href="#"><span>Сушильный цех</span></a></li>
+                                    <li><a class="link" href="#"><span>Цех обработки</span></a></li>
+                                    <li><a class="link" href="#"><span>Погрузка</span></a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="header-item">
+                            <a class="link" href="#"><span>Контакты</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="header-part">
+                <button class="header-button">Заказать звонок</button>
             </div>
         </div>
-        <div class="header-part">
-            <button class="header-button">Заказать звонок</button>
+    </header>
+    <main>
+        <div class="main">
+            <img class="background-image" src="img/index/background.png" alt="">
+            <div class="introduction">
+                <p class="title">Строительство домов и производство погонажных изделий из дерева</p>
+                <p class="title-info">Профессиональная команда строителей с опытом работы более 20 лет создаст для вас экологичную среду
+                    для жизни и работы</p>
+                <a href="#"><button class="title-category">В каталог</button></a>
+            </div>
         </div>
-    </div>
-</header>
-<div class="body">
-    <img class="background-image" src="img/index/background.png" alt="">
-    <div class="introduction">
-        <p class="title">Строительство домов и производство погонажных изделий из дерева</p>
-        <p class="title-info">Профессиональная команда строителей с опытом работы более 20 лет создаст для вас экологичную среду
-            для жизни и работы</p>
-        <a href="#"><button class="title-category">В каталог</button></a>
-    </div>
+    </main>
 </div>
 <script src="js/main.js"></script>
 </body>
