added part "about us" in index.html

--- a/index.html
+++ b/index.html
@@ -80,12 +80,45 @@
     </header>
     <main>
         <div class="main">
-            <img class="background-image" src="img/index/background.png" alt="">
-            <div class="introduction">
-                <p class="title">Строительство домов и производство погонажных изделий из дерева</p>
-                <p class="title-info">Профессиональная команда строителей с опытом работы более 20 лет создаст для вас экологичную среду
-                    для жизни и работы</p>
-                <a href="#"><button class="title-category">В каталог</button></a>
+            <div class="introduction-part">
+                <div class="introduction">
+                    <p class="title">Строительство домов и производство погонажных изделий из дерева</p>
+                    <p class="title-info">Профессиональная команда строителей с опытом работы более 20 лет создаст для вас экологичную среду
+                        для жизни и работы</p>
+                    <a href="#"><button class="title-category">В каталог</button></a>
+                </div>
+            </div>
+            <div class="about-us">
+                <div class="about-img">
+                    <img src="img/about-image.png" alt="about image">
+                </div>
+                <div class="about-information">
+                    <h2>О компании</h2>
+                    <div class="about-title">
+                        <p>ООО «МД-Строй — предприятие, работающее в сфере строительства жилых и нежилых зданий и
+                            производства погонажных изделий из сосны и лиственницы.</p>
+                    </div>
+                    <div class="detailed-about-us">
+                        <div class="small-about-title">
+                            <p>ООО «МД-Строй — предприятие, работающее в сфере строительства жилых и нежилых зданий и
+                                производства погонажных изделий из сосны и лиственницы.</p>
+                        </div>
+                        <div class="information-list">
+                            <ul>
+                                <li> > Строительство «под ключ» жилых домов и нежилых зданий</li>
+                                <li> > Составление и согласование сметы с заказчиком</li>
+                                <li> > Проектирование</li>
+                                <li> > Дизайн интерьера</li>
+                                <li> > Изготовление мебели и интерьерных изделий из дерева на заказ</li>
+                                <li> > Благоустройство прилегающей территории</li>
+                                <li> > Внутренняя и внешняя отделка</li>
+                                <li> > Монтаж напольного покрытия</li>
+                                <li> > Монтаж сайдинга</li>
+                            </ul>
+                        </div>
+                        <button class="about-button">Подробнее</button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
