--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
                     </div>
                 </div>
             </div>
+            <div class="choose-us">
+                <img class="background-img" src="img/choose_background.png" alt="choose background">
+                <div class="data-content">
+                    <h2 class="choose-title">почему выбирают нас</h2>
+                    <ul>
+                        <li> > Команда профессионалов, любящих своё дело</li>
+                        <li> > Качественное выполнение работ</li>
+                        <li> > Более 20 видов погонажных изделий из дерева</li>
+                        <li> > Современное  оборудование</li>
+                        <li> > Сдача объектов в заявленные сроки</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </main>
 </div>
