added news part in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,28 @@
                     </ul>
                 </div>
             </div>
-
+            <div class="news">
+                <h2 class="news-title">новости</h2>
+                <ul class="news-contain">
+                    <li class="news-data">
+                        <span class="news-data-title">Добавлена информация по новым изделиям</span>
+                        <span class="news-data-date">10 мая 2023 г</span>
+                    </li>
+                    <li class="news-data">
+                        <span class="news-data-title">Поздравляем коллектив регионального представительства  ООО «МД-Строй» с международным праздником</span>
+                        <span class="news-data-date">22 января 2023 г</span>
+                    </li>
+                    <li class="news-data">
+                        <span class="news-data-title">Срок действия договоренностей продлен на год</span>
+                        <span class="news-data-date">15 июня 2023 г</span>
+                    </li>
+                    <li class="news-data">
+                        <span class="news-data-title">Поступление в продажу новых изделий</span>
+                        <span class="news-data-date">2 июля 2023 г</span>
+                    </li>
+                </ul>
+                <a href="#"><button class="all-news-button">Все новости</button></a>
+            </div>
         </div>
     </main>
 </div>
