added contact part in index.html

--- a/index.html
+++ b/index.html
@@ -154,6 +154,26 @@
                 </ul>
                 <a href="#"><button class="all-news-button">Все новости</button></a>
             </div>
+            <div class="contacts">
+                <img src="img/contact-background.png" alt="contact-us image">
+                <div class="contact-contain-form">
+                    <form class="contact-form">
+                        <label class="contact-main-title">партнерам и клиентам</label><br>
+                        <label class="contact-title">Задать вопрос или оставить заявку</label><br>
+                        <label class="contact-help-text">Оставьте контактные данные, с вами свяжутся в ближайшее время</label><br>
+                        <label class="contact-users-data">
+                            <input type="text" class="contact-user-name" placeholder="Имя">
+                            <input type="text" class="contact-user-phone" placeholder="Телефон">
+                        </label>
+                        <label>
+                            <textarea rows="5" cols="80" class="contact-message" placeholder="Текст сообщения или вопрос"></textarea>
+                        </label>
+                        <label>
+                            <input type="submit" class="contact-send-button">
+                        </label>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
 </div>
