added footer part

--- a/index.html
+++ b/index.html
@@ -176,6 +176,51 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer">
+            <div class="footer-contain">
+                <img src="img/footer.png" class="footer-logo" alt="footer logo">
+                <div class="footer-contacts">
+                    <span class="footer-telephone-number">+7 (964) 465 00 65</span>
+                    <div class="contain-footer-contacts-links">
+                        <ul class="contacts-link-list">
+                            <li>
+                                <a class="footer-contacts-link"><img src="img/contacts-links/OK.png" alt="contacts link"></a>
+                            </li>
+                            <li>
+                                <a class="footer-contacts-link"><img src="img/contacts-links/VK.png" alt="contacts link"></a>
+                            </li>
+                            <li>
+                                <a class="footer-contacts-link"><img src="img/contacts-links/Whatsup.png" alt="contacts link"></a>
+                            </li>
+                            <li>
+                                <a class="footer-contacts-link"><img src="img/contacts-links/telegram.png" alt="contacts link"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="contain-links">
+                    <ul>
+                        <li class="footer-link">
+                            <a>Главная</a>
+                        </li>
+                        <li class="footer-link">
+                            <a>Каталог</a>
+                        </li>
+                        <li class="footer-link">
+                            <a>Строительство</a>
+                        </li>
+                        <li class="footer-link">
+                            <a>Производство</a>
+                        </li>
+                        <li class="footer-link">
+                            <a>Контакты</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 <script src="js/main.js"></script>
 </body>
